# rmatrix

./: .gitignore  Cargo.toml  README.md
data/: mats.json
src/: error.rs  lib.rs  main.rs  matrix.rs  matrix_size.rs  number.rs  types.rs
src/complex/: base.rs  mod.rs  num.rs  utils.rs
src/core/: matrix_base.rs  matrix_fn.rs  matrix_ops.rs  mod.rs
src/matrix/: attr.rs  base.rs  json.rs  math.rs  mod.rs  normal.rs  shape.rs  utils.rs
tests/: matrix_time_test.rs  tests.rs
tests/common/: mod.rs
