[package]
name = "rmatrix"
version = "0.2.0"
edition = "2021"
description = "matrix and some algebra in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rmatrix"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
rand = "^0.8.5"
serde = { version = "^1.0.192", features = ["derive"] }
serde_json = "^1.0.108"
