[package]
name = "rmatrix"
authors = ["Kevin Stephen <kizunaaisesu@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "matrix and some algebra in Rust"
readme = "README.md"
repository = "https://github.com/kands-code/rmatrix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rmatrix"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
rand = "^0.8.5"
